--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CalendApp - No, You're the Clone!</title>
+    <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
