WIP not sure what's happening

--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
     <div id="calend-app-inline-widget" data-url="testuser/monday-event" style="min-width: 320px; height: 630px;"></div>
-  <script type="text/javascript" src="/widget.bundle.js"></script>
+  <script type="text/javascript" src="/assets/widget.bundle.js"></script>
 </html>
