--- a/client/widget-build/index.html
+++ b/client/widget-build/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <div id="calend-app-inline-widget" data-url="testuser/monday-event" style="min-width: 320px; height: 630px;"></div>
-  <script type="text/javascript" src="/assets/widget.bundle.js"></script>
+  <div id="calend-app-inline-widget" data-url="tester/friday" style="min-width: 320px; height: 630px;"></div>
+  <script type="text/javascript" src="http://localhost:3002/assets/widget/widget.bundle.js"></script>
 </html>
