--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CalendApp - No, You're the Clone!</title>
-    <link rel="icon" href="./favicon.png" type="image/png" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/hatchways/team-yugioh/dev/client/public/favicon.png"
+      type="image/png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
